# gemmini

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
gemmini/: __init__.py  canvas.py  misc.py  plot.py
gemmini/calc/: __init__.py  coords.py  geometry.py
gemmini/d2/: __init__.py  _gem.py  _gem2D.py  line2D.py  point.py  point2D.py  polar2D.py  polygon2D.py  shape2D.py  transform2D.py
gemmini/shape/: __init__.py  _gem.py  coords.py  point.py
gemmini/test/: test_canvas.py  test_misc.py
gemmini/test/calc/: test_coords.py  test_geometry.py
gemmini/test/d2/: test_gem2D.py  test_line2D.py  test_point.py  test_point2D.py  test_polar2D.py  test_polygon2D.py  test_shape2D.py  test_transform2D.py
gemmini/test/shape/: test_coords.py  test_point.py
gemplib/: __init__.py  misc.py
gemplib/shape/: __init__.py  _gem.py  coords.py  point.py
gemplib/test/shape/: test_coords.py  test_point.py
tutorials/: test_all.ipynb  test_canvas.ipynb  test_line.ipynb  test_point.ipynb  test_polar.ipynb  test_polygon.ipynb  test_shape.ipynb  test_shapely.ipynb  test_transform.ipynb
