[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "gemmini"
dynamic = ["version"]
authors = [
    {name = "Yankos", email = "byanko55@gmail.com"},
]
maintainers = [
    {name = "gemmini contributors"},
]
description = "Python package for constructing and handling geometric objects"
readme = "README.rst"
keywords = ["geometry", "drawing 2D/3D graphic"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.15",
    "matplotlib>=3.3"
]

[project.urls]
Documentation = "https://github.com/byanko55/gemmini"
Repository = "https://github.com/byanko55/gemmini"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gemmini", "gemmini.*"]

[tool.coverage.run]
source = ["gemmini"]